--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-info-plugin",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "it's a webpack4 plugin to help developers get git info in current build ",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,11 @@
     "type": "git",
     "url": "https://github.com/xuelq007/GitInfoPlugin.git"
   },
+  "keywords": [
+    "git",
+    "commit",
+    "webpack"
+  ],
   "devDependencies": {
     "eslint": "^5.4.0",
     "webpack": "^4.1.1"
