--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "it's a webpack4 plugin to help developers get git info in current build ",
   "main": "index.js",
   "scripts": {
-    "test": ""
+    "test": "",
+    "fix": "./node_modules/.bin/eslint index.js --fix"
   },
   "engines": {
     "node": ">=7"
