--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "eslint": "^5.4.0",
     "webpack": "^4.1.1"
+  },
+  "dependencies": {
+    "moment": "^2.29.1"
   }
 }
